<resources>
    <string name="app_name">Gastro Go!</string>
    <string name="login">Anmelden</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="place">Ort</string>
    <string name="zip">Plz</string>
    <string name="street">Straße</string>
    <string name="name">Name</string>
    <string name="register">Registrieren</string>
    <string name="click_to_login">Klicken zum anmelden</string>
    <string name="click_to_register">Klicken zum registrieren</string>
    <string name="logout">Abmelden</string>
    <string name="click_to_create_restaurant">Restaurant erstellen</string>
    <string name="back">Zurück</string>
    <string name="housenr">Hausnummer</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="add">Hinzufügen</string>
    <string name="delete">Löschen</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="time">Zeit</string>
    <string name="date">Datum</string>
    <string name="start">Beginn</string>
    <string name="finish">Ende</string>
    <string name="homepage">Startseite</string>
    <string name="settings">Einstellungen</string>
    <string name="enter_email">Email eingeben</string>
    <string name="enter_name">Name eingeben</string>
    <string name="enter_place">Ort eingeben</string>
    <string name="enter_zip">Postleitzahl eingeben</string>
    <string name="enter_street">Straße eingeben</string>
    <string name="enter_housenumber">Hausnummer eingeben</string>
    <string name="zip_has_to_be_numeric">Postleitzahl muss eine Zahl sein</string>
    <string name="housenumber_has_to_be_numeric">Hausnummer muss eine Zahl sein</string>
    <string name="email_already_registered">Diese E-Mail ist bereits registriert</string>
    <string name="authentication_error">"Authentifizierungsfehler: "</string>
    <string name="really_delete">" wirklich Löschen?"</string>
    <string name="employee">Mitarbeiter</string>
    <string name="continue_working">Arbeitstag forsetzen?</string>
    <string name="start_working">Arbeitstag beginnen?</string>
    <string name="confirm">bestätigen</string>
    <string name="min_6_characters">Passwort muss mindestens 6 Zeichen lang sein</string>
    <string name="password_requirement">Passwort muss mindestens eine Ziffer, einen Großbuchstaben und einen Kleinbuchstaben enthalten</string>
    <string name="enter_password">Passwort eingeben</string>
    <string name="email_not_registered">Diese E-Mail ist nicht registriert</string>
    <string name="wrong_password">Falsches Passwort</string>
    <string name="really_delete_restaurant">Möchten Sie das Restaurant wirklich löschen?</string>
    <string name="dashboard">Dashboard</string>
    <string name="dishes">Gerichte</string>
    <string name="table_number">Tischnummer: </string>
    <string name="table_qr_codes">Tisch QR-Codes</string>
    <string name="scan_table_qr_code">Tisch QR Code scannen</string>
    <string name="tables">Tische</string>
    <string name="finish_work">Arbeitstag beenden?</string>
    <string name="end">beenden</string>
    <string name="eat">Essen</string>
    <string name="work">Arbeiten</string>
    <string name="menu">Speisekarte</string>
    <string name="employees">Mitarbeiter</string>
    <string name="qr_codes">QR Codes</string>
    <string name="skip">überspringen</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="dark_mode">Darkmode</string>
    <string name="employee_login">Mitarbeiter Login</string>
    <string name="enter_employee_key">Mitarbeiterschlüssel eingeben</string>
    <string name="open">Offen</string>
    <string name="closed">Geschlossen</string>
    <string name="add_order">Bestellung hinzufügen</string>
    <string name="bill">Rechnung</string>
    <string name="timer">Timer</string>
    <string name="welcome">Willkommen</string>
    <string name="to_gastro_go">zu Gastro Go!</string>
    <string name="or_create_restaurant">Oder Restaurant erstellen</string>
    <string name="dish_name">Gerichtname</string>
    <string name="price">Preis</string>
    <string name="edit">Bearbeiten</string>
    <string name="really_delete_dish">Gericht wirklich löschen?</string>
    <string name="create_employee">Mitarbeiter anlegen</string>
    <string name="set_name">"Name: "</string>
    <string name="create">Anlegen</string>
    <string name="total_cost">"Gesamtkosten: "</string>
    <string name="order">Bestellen</string>
    <string name="ingredients">Zutaten</string>
    <string name="set_key">"Schlüssel: "</string>
    <string name="order_noun">Bestellung</string>
    <string name="search">Suchen</string>
    <string name="table_nr">Tischnummer</string>
    <string name="language">Sprache</string>
    <string-array name="languages">
        <item>Deutsch</item>
        <item>Englisch</item>"
    </string-array>
    <string name="call_waiter">Kellner rufen</string>
    <string name="pay">Bezahlen</string>
    <string name="orderView">Bestellansicht</string>
    <string name="employee_name">Mitarbeiter Name</string>
    <string name="confirm_waiter">Wollen Sie wirklich einen Kellner rufen?</string>
    <string name="call">Rufen</string>
    <string name="waiter_called">Kellner gerufen</string>
    <string name="delete_employee">Wollen Sie den Mitarbeiter wirklich löschen?</string>
    <string name="no_order">Keine Bestellung</string>
    <string name="key_used">Schlüssel bereits verwendet!</string>
    <string name="maximum_exceeded">Maximale Menge überschritten</string>
    <string name="account_created">Account erstellt</string>
    <string name="no_dishes_addad">Keine Gerichte zur Bestellung hinzugefügt</string>
    <string name="login_successful">Login erfolgreich</string>
    <string name="input_incomplete">Eingabe unvollständig</string>
    <string name="pdf_error">Fehler beim Erstellen der PDF-Datei</string>
    <string name="cancelled">Abgebrochen</string>
    <string name="cam_permission">Kameraberechtigung erforderlich</string>
    <string name="wrong_key">Schlüssel falsch!</string>
    <string name="lukas_hater">Lukas ist ein Bastard</string>
</resources>