<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        tools:layout_editor_absoluteY="1dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/benachrichtigungen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/notifications"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/dark_mode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                style="@style/StartseiteTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language" />

            <Spinner
                android:id="@+id/spinner_languages"
                style="@android:style/Widget.Holo.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/colorBackground"
                android:theme="@style/Base.Theme.MyApplication" />
        </LinearLayout>

        <TextView
            android:id="@+id/mTitel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/employee_login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mitarbeiterLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:clickable="true"
                android:scaleX="0.75"
                android:scaleY="0.75"
                app:backgroundTint="@drawable/fab_employee_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_send"
                app:tint="@color/white" />

            <EditText
                android:id="@+id/schluesselEingabe"
                android:layout_width="268dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/enter_employee_key"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mitarbeiterLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"/>

</LinearLayout>
</LinearLayout>