<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/redbar"
    android:fitsSystemWindows="true"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/pizza" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/to_gastro_go"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="24dp">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/modern_button_click_effect"
                    android:backgroundTint="@color/modern_green"
                    android:text="@string/login"
                    android:textColor="#FFFBF8"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/modern_button_unselected_click_effect"
                    android:text="@string/register"
                    android:textColor="@color/text_gray"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:elevation="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="50dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/restaurantButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/or_create_restaurant" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>